<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	tools:context=".controller.PhotoActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/photo_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:popupTheme="?attr/actionBarPopupTheme" />

	<ImageView
		android:id="@+id/photo_image"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="@string/content_desc_image_display"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/photo_button_right"
		tools:srcCompat="@tools:sample/backgrounds/scenic" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/photo_button_left"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:clickable="true"
		android:contentDescription="@string/content_desc_previous_icon"
		app:backgroundTint="@color/colorPrimary"
		app:fabCustomSize="46dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/photo_button_right"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/photo_button_right"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/ic_left_32"
		app:tint="@color/white" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/photo_button_right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:clickable="true"
		android:contentDescription="@string/content_desc_next_icon"
		app:backgroundTint="@color/colorPrimary"
		app:fabCustomSize="46dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/photo_toolbar"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/ic_right_32"
		app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>