<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photo_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo_card_layout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/photo_card_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:contentDescription="@string/content_desc_thumbnail_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/photo_card_text_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/photo_card_text_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/photo_card_overflow_button"
            app:layout_constraintStart_toEndOf="@+id/photo_card_image_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:text="Photo Details" />

        <ImageButton
            android:id="@+id/photo_card_overflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_overflow_icon"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_overflow_32"
            app:tint="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/photo_card_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_view_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/photo_card_button_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_delete_icon"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_delete_32"
            app:tint="@color/colorAccent" />

        <ImageButton
            android:id="@+id/photo_card_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_cancel_icon"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_cancel_32"
            app:tint="@color/colorAccent" />

    </LinearLayout>
</androidx.cardview.widget.CardView>